--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -17,12 +17,16 @@ jobs:
     strategy:
       matrix:
         dependencies:
-          - "locked"
+          - "lowest"
+          - "highest"
         php-version:
           - "7.4"
-          - "8.0"
         operating-system:
           - "ubuntu-latest"
+        include:
+          - php: "8.0"
+            dependencies: "highest"
+            composer-options: "--ignore-platform-reqs"
 
     steps:
       - name: "Checkout"
@@ -36,26 +40,10 @@ jobs:
           ini-values: memory_limit=-1
           tools: composer:v2
 
-      - name: "Cache dependencies"
-        uses: "actions/cache@v2"
+      - uses: "ramsey/composer-install@v1"
         with:
-          path: |
-            ~/.composer/cache
-            vendor
-          key: "php-${{ matrix.php-version }}-${{ matrix.dependencies }}"
-          restore-keys: "php-${{ matrix.php-version }}-${{ matrix.dependencies }}"
-
-      - name: "Install lowest dependencies"
-        if: ${{ matrix.dependencies == 'lowest' }}
-        run: "composer update --prefer-lowest --no-interaction --no-progress --no-suggest"
-
-      - name: "Install highest dependencies"
-        if: ${{ matrix.dependencies == 'highest' }}
-        run: "composer update --no-interaction --no-progress --no-suggest"
-
-      - name: "Install locked dependencies"
-        if: ${{ matrix.dependencies == 'locked' }}
-        run: "composer install --no-interaction --no-progress --no-suggest"
+          dependency-versions: "${{ matrix.dependencies }}"
+          composer-options: "${{ matrix.composer-options }}"
 
       - name: "Tests"
         run: "vendor/bin/phpunit --coverage-clover build/logs/clover.xml --coverage-text"
