--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -13,5 +13,10 @@
     <file>./src</file>
     <file>./tests</file>
 
-    <rule ref="Doctrine"/>
+    <rule ref="Doctrine">
+        <properties>
+            <property name="lineLimit" value="160"/>
+            <property name="absoluteLineLimit" value="180"/>
+        </properties>
+    </rule>
 </ruleset>
