--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,34 @@
 {
     "name": "los/api-auth",
     "description": "Auth Middleware for apis",
+    "license": "MIT",
     "type": "library",
-    "keywords": ["api", "authorization", "authentication", "middleware"],
+    "keywords": [
+        "api",
+        "authorization",
+        "authentication",
+        "middleware"
+    ],
+    "authors": [
+        {
+            "name": "Leandro Silva",
+            "email": "lansoweb@hotmail.com"
+        }
+    ],
     "require": {
-        "php": "^7.4 | ^8.0",
+        "php": "^8.0",
         "mezzio/mezzio-problem-details": "^1.2",
-        "psr/container": "^1.0",
-        "psr/http-message": "^1.0",
-        "psr/http-server-middleware": "^1.0"
+        "psr/container": "^1.0 || ^2.0",
+        "psr/http-message": "^1.0 || ^2.0",
+        "psr/http-server-middleware": "^1.0 || ^2.0"
     },
     "require-dev": {
-        "doctrine/coding-standard": "^8.2",
-        "laminas/laminas-diactoros": "^2.5",
-        "phpstan/phpstan": "^0.12.58",
-        "phpunit/phpunit": "^9.5",
+        "doctrine/coding-standard": "^12.0",
+        "laminas/laminas-diactoros": "^3.2",
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.3",
         "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^4.3"
+        "vimeo/psalm": "^5.3"
     },
     "autoload": {
         "psr-4": {
@@ -29,15 +41,11 @@
         }
     },
     "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        },
         "sort-packages": true
     },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Leandro Silva",
-            "email": "lansoweb@hotmail.com"
-        }
-    ],
     "scripts": {
         "check": [
             "@cs-check",
@@ -45,12 +53,12 @@
             "@psalm",
             "@test"
         ],
+        "coverage": "phpunit --coverage-clover build/logs/clover.xml",
+        "coverage:html": "phpunit --coverage-html build/coverage",
         "cs-check": "phpcs -s",
         "cs-fix": "phpcbf",
         "phpstan": "phpstan analyze",
         "psalm": "psalm --diff --show-info=true",
-        "test": "phpunit --colors=always",
-        "coverage": "phpunit --coverage-clover build/logs/clover.xml",
-        "coverage:html": "phpunit --coverage-html build/coverage"
+        "test": "phpunit --colors=always"
     }
 }
