--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -1,6 +1,4 @@
-# https://help.github.com/en/categories/automating-your-workflow-with-github-actions
-
-name: "Static Analysis by Psalm"
+name: "Static Analysis by phpstan"
 
 on:
   pull_request:
@@ -10,7 +8,7 @@ on:
 
 jobs:
   static-analysis-psalm:
-    name: "Static Analysis by Psalm"
+    name: "Static Analysis by phpstan"
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -19,13 +17,13 @@ jobs:
         dependencies:
           - "highest"
         php-version:
-          - "7.4"
+          - "8.2"
         operating-system:
           - "ubuntu-latest"
 
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v3"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
